--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ NVM_NODEJS_ORG_MIRROR=http://nodejs.org/dist</code>.</p>
       <footer class="inner">
         <p class="copyright">Idc-op-interface maintained by <a href="https://github.com/HustLion">HustLion</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <script type='text/javascript' src='https://www.openhub.net/p/gnome-terminal-colors-solarized/widgets/project_basic_stats?format=js'></script>
       </footer>
     </div>
 
